--- a/app/src/main/resources/templates/books/books-lists.mustache
+++ b/app/src/main/resources/templates/books/books-lists.mustache
@@ -102,6 +102,9 @@
             <div class="card-body">
                 <h4 class="card-title" style="text-align: center;">{{bookType}}</h4>
                 <h6> 책 이미지를 클릭하면 보다 자세한 정보를 확인할 수 있습니다 </h6>
+                {{^book}}
+                    <h1 style="text-align: center; margin-top:50px; color:red;">책이 존재하지 않습니다</h1>
+                {{/book}}
                 <div class="gallery-wrapper">
                     <ul>
                         {{#book}}
