스터디 검색 요청을 개선하라
스터디 검색 요청에서 공통 부분을 따로 메서드로 분리합니다

--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -13,7 +13,7 @@
                     <li class="list-group-item"><a href="/studys/close">진행중</a></li>
                     <li class="list-group-item"><a href="/studys/end">종료</a></li>
                     <li class="list-group-item">
-                        <form class="navbar-form pull-left" action="/studys/{{studyStatusCode}}" method="get">
+                        <form class="navbar-form pull-left" action="/studys/{{studyStateCode}}" method="get">
                             <label for="keyword"></label>
                             <input type="text" id="title" name="keyword" placeholder="책 제목을 입력하세요">
                             <button type="submit" class="btn btn-primary btn-sm">검색</button>
