개인정보 수정 파일 업로드르 개선하라
개인정보 수정 시, 파일업로드가 제대로 되지 않았던 내용을 개선합니다

--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -17,6 +17,7 @@
                             <div class="imagePreview">
                                 {{#account.uploadFile}}
                                     <img class="imgPreview" src="https://dwhdcf0tf1pjg.cloudfront.net/{{account.uploadFile.fileName}}" alt="">
+                                    <input type="hidden" id="savedFileName" name="savedFileName" value="{{account.uploadFile.fileName}}" />
                                 {{/account.uploadFile}}
                             </div>
                             <label class="btn btn-primary upload">
