크롤링 버튼을 추가하고 권한으로 제한하라
인터뷰 게시판에 크롤링 버튼을 추가합니다. 이는 어드민 권한 계정만
보이고, 마찬가지로 전체 크롤링은 어드민 권한만 가능합니다

--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -11,6 +11,9 @@
                     <input type="hidden" class="totalPage" value="{{pageUtils.totalPage}}">
                     <input type="hidden" class="next" value="{{pageUtils.next}}">
                 </form>
+                {{#adminAuthority}}
+                <button type="button" class="btn btn-primary" id="btn-save-interviews">인터뷰 최신 크롤링 저장</button>
+                {{/adminAuthority}}
                 <div class="list_button_wrap">
                     <div class="list_paging">
                         <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
