--- a/app/src/main/resources/templates/users/users-update.mustache
+++ b/app/src/main/resources/templates/users/users-update.mustache
@@ -16,7 +16,7 @@
                         <div class="col-sm-2 imgUp">
                             <div class="imagePreview">
                                 {{#account.uploadFile}}
-                                    <img class="imgPreview" src="https://dwhdcf0tf1pjg.cloudfront.net/{{account.uploadFile.fileName}}" alt="">
+                                    <img class="imgPreview" src="/upload/{{account.uploadFile.fileName}}" alt="">
                                     <input type="hidden" id="savedFileName" name="savedFileName" value="{{account.uploadFile.fileName}}" />
                                 {{/account.uploadFile}}
                             </div>
