--- a/app/src/main/resources/templates/interviews/interviews-list.mustache
+++ b/app/src/main/resources/templates/interviews/interviews-list.mustache
@@ -1,42 +1,65 @@
 {{>layout/header}}
 <link rel="stylesheet" type="text/css" href="/js/app/interviews.css">
+<script>
+    $(document).ready(function(){
+        $(".page").val({{page.currentPage}});
+        $(".previous").val({{page.previous}});
+        $(".next").val({{page.next}});
+        $(".totalPages").val({{page.totalPages}});
 
+        var targetPage = $(".page").val();
+        $('.page' + targetPage).html('<strong>' + targetPage + '</strong>');
+
+        var totalPages = $(".totalPage").val();
+        var next = $(".next").val();
+        // if(totalPages < next) {
+        //     $('.btn_next').hide();
+        //     $('.btn_last').hide();
+        // }
+
+/*        if(targetPage < 11) {
+            $('.btn_prev').hide();
+            $('.btn_first').hide();
+        }*/
+    })
+</script>
 <div class="container-fluid" style="margin-top: 100px; text-align: center">
     <div class="row">
         <div class="card shadow col-md-12">
             <div class="card-body">
                 <h4 class="card-title" style="text-align: center;"></h4>
                 <form name="frmList" method="get">
-                    <input type="hidden" name="targetPage" class="targetPage" value="{{pageUtils.targetPage}}">
-                    <input type="hidden" class="totalPage" value="{{pageUtils.totalPage}}">
-                    <input type="hidden" class="next" value="{{pageUtils.next}}">
+                    <input type="hidden" name="page" class="page" value="">
+                    <input type="hidden" class="totalPages" value="">
+                    <input type="hidden" class="next" value="">
+                    <input type="hidden" class="previous" value="">
                 </form>
                 {{#adminAuthority}}
-                <button type="button" class="btn btn-primary" id="btn-save-interviews">인터뷰 최신 크롤링 저장</button>
+                    <button type="button" class="btn btn-primary" id="btn-save-interviews">인터뷰 최신 크롤링 저장</button>
                 {{/adminAuthority}}
                 <div class="list_button_wrap">
                     <div class="list_paging">
                         <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
                         </a>
-                        <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.previous}}')">
+                        <a class="btn_prev" href="javascript:void(0)" onclick="go_previous()">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
                         </a>
-                        {{#pageUtils.pageNumberList}}
+                        {{#page.pageNumbers}}
                             <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
                                 {{.}}
                             </a>
-                        {{/pageUtils.pageNumberList}}
-                        <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.next}}')">
+                        {{/page.pageNumbers}}
+                        <a class="btn_next" href="javascript:void(0)" onclick="go_next()">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
                         </a>
-                        <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.totalPage}}')">
+                        <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{page.totalPages}}')">
                             <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
                         </a>
                     </div>
                 </div>
                 <ul class="list_author_interview">
-                    {{#lists}}
+                    {{#list}}
                         <hr>
                         <li>
                             <div class="photo">
@@ -61,24 +84,24 @@
                                 </a>
                             </div>
                         </li>
-                    {{/lists}}
+                    {{/list}}
                 </ul>
                 <div class="list_paging">
-                    <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('1')">
+                    <a class="btn_first" href="javascript:void(0)" onclick="go_targetPage('0')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev10.gif" alt="처음">
                     </a>
-                    <a class="btn_prev" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.previous}}')">
+                    <a class="btn_prev" href="javascript:void(0)" onclick="go_previous()">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_prev.gif" alt="이전">
                     </a>
-                    {{#pageUtils.pageNumberList}}
+                    {{#page.pageNumbers}}
                         <a class="page{{.}}" href="javascript:void(0)" onclick="go_targetPage('{{.}}')">
                             {{.}}
                         </a>
-                    {{/pageUtils.pageNumberList}}
-                    <a class="btn_next" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.next}}')">
+                    {{/page.pageNumbers}}
+                    <a class="btn_next" href="javascript:void(0)" onclick="go_next()">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next.gif" alt="이후">
                     </a>
-                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{pageUtils.totalPage}}')">
+                    <a class="btn_last" href="javascript:void(0)" onclick="go_targetPage('{{page.totalPages}}')">
                         <img src="http://image.kyobobook.co.kr/new_ink/booknews/FRONT/images/common/pg_next10.gif" alt="마지막">
                     </a>
                 </div>
