스터디 조회 화면 좋아요를 개선하라
기존에 하드코딩으로 넣었던 좋아요 여부와 좋아요 수를 실제 데이터베이스
결과를 조회하도록 개선합니다

--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -52,13 +52,17 @@
                             <td class="text-center d-none d-md-table-cell">{{bookName}}</td>
                             <td class="text-center d-none d-md-table-cell">{{applyCount}} / {{size}}</td>
                             <td class="text-center d-none d-md-table-cell">{{startDate}} {{startTime}}({{day}})</td>
-                            <td style="text-align: center;">
+                        {{#liked}}
+                            <td class="text-center d-none d-md-table-cell" style="text-align: center;">
                                 <i class="fas fa-heart" style="font-size:24px; color:red;"></i>
                             </td>
-<!--                            <div class="heart">
-                                <i class="far fa-heart" style="font-size:24px;color:red"></i>
-                            </div>-->
-                            <td class="text-center d-none d-md-table-cell">5</td>
+                        {{/liked}}
+                        {{^liked}}
+                            <td class="text-center d-none d-md-table-cell" style="text-align: center;">
+                                <i class="far fa-heart" style="font-size:24px; color:red;"></i>
+                            </td>
+                        {{/liked}}
+                            <td class="text-center d-none d-md-table-cell">{{likesCount}}</td>
                         </tr>
                     {{/studys}}
                     </tbody>
