좋아요 화면과 서비스를 개선하라
좋아요 화면은 하트를 클릭시 모양이 변하도록 개선하고 서비스에서 로그인
여부에 따라 다른 정보를 보여주도록 개선합니다

--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -4,6 +4,23 @@
         text-align: center;
     }
 </style>
+<script>
+    function toggleLike(likeId, likeCountId, id) {
+        let likeIcon = $("#"+likeId+id);
+        let likeCount = $("#"+likeCountId+id);
+
+        if(likeIcon.hasClass("far")) {
+            likeIcon.addClass("fas");
+            likeIcon.removeClass("far");
+            likeCount.html(Number(likeCount.html()) + 1);
+        }
+        else if(likeIcon.hasClass("fas")) {
+            likeIcon.removeClass("fas");
+            likeIcon.addClass("far");
+            likeCount.html(Number(likeCount.html()) - 1);
+        }
+    }
+</script>
 <div class="container-fluid" style="margin-top: 100px">
     <div class="row">
         <div class="col-md-2">
@@ -52,17 +69,13 @@
                             <td class="text-center d-none d-md-table-cell">{{bookName}}</td>
                             <td class="text-center d-none d-md-table-cell">{{applyCount}} / {{size}}</td>
                             <td class="text-center d-none d-md-table-cell">{{startDate}} {{startTime}}({{day}})</td>
-                        {{#liked}}
                             <td class="text-center d-none d-md-table-cell" style="text-align: center;">
-                                <i class="fas fa-heart" style="font-size:24px; color:red;"></i>
+                                <div>
+                                    <i class="{{#liked}}fas{{/liked}} {{^liked}}far{{/liked}} fa-heart" id="studyLike{{id}}"
+                                       style="font-size:24px; color:red;" onclick="toggleLike('studyLike', 'studyLikeCount', {{id}})"></i>
+                                </div>
                             </td>
-                        {{/liked}}
-                        {{^liked}}
-                            <td class="text-center d-none d-md-table-cell" style="text-align: center;">
-                                <i class="far fa-heart" style="font-size:24px; color:red;"></i>
-                            </td>
-                        {{/liked}}
-                            <td class="text-center d-none d-md-table-cell">{{likesCount}}</td>
+                            <td class="text-center d-none d-md-table-cell" id="studyLikeCount{{id}}">{{likesCount}}</td>
                         </tr>
                     {{/studys}}
                     </tbody>
