스터디 좋아요 취소 요청을 추가하라
스터디 게시판 화면에서 좋아요 취소 요청과 서버의 요청을 추가합니다

취소 서비스를 구현해야 합니다

--- a/app/src/main/resources/templates/studys/studys-list.mustache
+++ b/app/src/main/resources/templates/studys/studys-list.mustache
@@ -27,9 +27,18 @@
 
         //좋아요 취소를 할 경우
         else if(likeIcon.hasClass("fas")) {
-            likeIcon.removeClass("fas");
-            likeIcon.addClass("far");
-            likeCount.html(Number(likeCount.html()) - 1);
+            $.ajax({
+                type: 'DELETE',
+                url: '/api/study/like/' + id,
+                dataType: 'json',
+                contentType: 'application/json;',
+            }).done(function (data) {
+                likeIcon.removeClass("fas");
+                likeIcon.addClass("far");
+                likeCount.html(Number(likeCount.html()) - 1);
+            }).fail(function (request) {
+                alert(request.responseText);
+            });
         }
     }
 </script>
