화면에서 댓글 저장 요청을 추가하라
화면에서 댓글을 저장하면 서버로 요청하는 로직을 추가합니다

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -193,8 +193,8 @@
                     <div class="mt-5 d-flex flex-row">
                         <img src="https://i.imgur.com/jD4jCW9.png" width="40" height="40">
                         <div class="w-100 ml-2 comment-area">
-                            <textarea class="form-control"></textarea>
-                            <button class="btn btn-secondary btn-block mt-2 post-btn">Post</button>
+                            <textarea class="form-control" id="studyComment"></textarea>
+                            <button class="btn btn-secondary btn-block mt-2 post-btn" id="btn-save-studyComment">등록</button>
                         </div>
                     </div>
                 </div>
