스터디 댓글 좋아요를 개선하라
스터디 댓글 좋아요를 서버의 응답에 따라 나타내도록 개선합니다
서버의 좋아요 갯수 반황형을 개선해야합니다

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -212,7 +212,7 @@
                             <span style="float:right">
                                 <i class="{{#liked}}fas{{/liked}} {{^liked}}far{{/liked}} fa-heart" id="studyCommentLike{{id}}"
                                    style="font-size:24px; color:red;" onclick="toggleLike('studyCommentLike', 'studyCommentLikeCount', {{id}})"></i>
-                                <span>5</span>
+                                <span id="studyLikeCount{{id}}">{{likesCount}}</span>
                             </span>
                         </div>
                         <div class="font-weight-bold">{{content}}</div>
