스터디 댓글 좋아요 서비스를 구현하라
스터디 댓글 좋아요를 눌렀을 때 추가하도록 서비스를 구현합니다. 반환형에
댓글 좋아요 갯수와 좋아요 여부를 추가합니다

댓글 삭제를 구현해야 합니다

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -75,7 +75,7 @@
         if(likeIcon.hasClass("far")) {
             $.ajax({
                 type: 'POST',
-                url: `/api/study/${studyId}/comment/${commentId}/like`,
+                url: `/api/study/${commentId}/like`,
                 dataType: 'json',
                 contentType: 'application/json;',
             }).done(function (data) {
@@ -91,7 +91,7 @@
         else if(likeIcon.hasClass("fas")) {
             $.ajax({
                 type: 'DELETE',
-                url: `/api/study/${studyId}/comment/${commentId}/like`,
+                url: `/api/study/comment/${commentId}/like`,
                 dataType: 'json',
                 contentType: 'application/json;',
             }).done(function (data) {
@@ -211,8 +211,8 @@
                             </div>
                             <span style="float:right">
                                 <i class="{{#liked}}fas{{/liked}} {{^liked}}far{{/liked}} fa-heart" id="studyCommentLike{{id}}"
-                                   style="font-size:24px; color:red;" onclick="toggleLike('studyCommentLike', 'studyCommentLikeCount', {{id}})"></i>
-                                <span id="studyLikeCount{{id}}">{{likesCount}}</span>
+                                   style="font-size:24px; color:red;" onclick="toggleLike('studyCommentLike', 'StudyCommentLikeCount', {{id}})"></i>
+                                <span id="StudyCommentLikeCount{{id}}">{{likesCount}}</span>
                             </span>
                         </div>
                         <div class="font-weight-bold">{{content}}</div>
