스터디 댓글 좋아요 요청 주소를 개선하라
이전에는 댓글이라는 정보가 경로에 없었지만 댓글을 경로에 추가합니다

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -75,7 +75,7 @@
         if(likeIcon.hasClass("far")) {
             $.ajax({
                 type: 'POST',
-                url: `/api/study/${commentId}/like`,
+                url: `/api/study/comment/${commentId}/like`,
                 dataType: 'json',
                 contentType: 'application/json;',
             }).done(function (data) {
@@ -91,7 +91,7 @@
         else if(likeIcon.hasClass("fas")) {
             $.ajax({
                 type: 'DELETE',
-                url: `/api/study/comment/${commentId}/like`,
+                url: `/api/study/comment/${commentId}/unlike`,
                 dataType: 'json',
                 contentType: 'application/json;',
             }).done(function (data) {
