스터디 조회화면 즐겨찾기를 개선하라
스터디 조회화면에서 즐겨찾기 취소가 제대로 되지 않았는데 즐겨찾기 여부를
제대로 반영하도록 개선합니다

--- a/app/src/main/resources/templates/studys/studys-detail.mustache
+++ b/app/src/main/resources/templates/studys/studys-detail.mustache
@@ -201,8 +201,10 @@
             </div>
         </form>
         <a href="/" role="button" class="btn btn-secondary">돌아가기</a>
-        <i class="{{#isFavorite}}fas{{/isFavorite}} {{^isFavorite}}far{{/isFavorite}} fa-star" id="Favorite{{id}}"
-           style="font-size:24px; color:yellow;" onclick="toggleFavorite('Favorite', {{id}})"></i>
+        {{#detailedStudy.studyResultDto}}
+            <i class="{{#isFavorite}}fas{{/isFavorite}} {{^isFavorite}}far{{/isFavorite}} fa-star" id="Favorite{{id}}"
+               style="font-size:24px; color:yellow;" onclick="toggleFavorite('Favorite', {{id}})"></i>
+        {{/detailedStudy.studyResultDto}}
         {{#account}}
             {{^study}}
                 <button type="button" class="btn btn-primary" id="btn-apply-study">신청</button>
